DevTools: Instrument WebCrypto API for DevTools timeline.

BUG=643375

Change-Id: I6ebb61a29723b6a9dd1523b06d7b3ebfe978c97c