components/webcrypto/webcrypto_impl.cc
@@ -18,6 +18,7 @@
 #include "base/task_runner.h"
 #include "base/threading/thread.h"
 #include "base/threading/thread_task_runner_handle.h"
+#include "base/trace_event/trace_event.h"
 #include "components/webcrypto/algorithm_dispatch.h"
 #include "components/webcrypto/crypto_data.h"
 #include "components/webcrypto/generate_key_result.h"
@@ -374,10 +375,12 @@ struct DeriveKeyState : public BaseState {
 // * The methods named Do*Reply() run on the target Blink thread
 
 void DoEncryptReply(std::unique_ptr<EncryptState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoEncryptReply");
   CompleteWithBufferOrError(state->status, state->buffer, &state->result);
 }
 
 void DoEncrypt(std::unique_ptr<EncryptState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoEncrypt");
   EncryptState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -389,10 +392,12 @@ void DoEncrypt(std::unique_ptr<EncryptState> passed_state) {
 }
 
 void DoDecryptReply(std::unique_ptr<DecryptState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoDecryptReply");
   CompleteWithBufferOrError(state->status, state->buffer, &state->result);
 }
 
 void DoDecrypt(std::unique_ptr<DecryptState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoDecrypt");
   DecryptState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -404,10 +409,12 @@ void DoDecrypt(std::unique_ptr<DecryptState> passed_state) {
 }
 
 void DoDigestReply(std::unique_ptr<DigestState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoDigestReply");
   CompleteWithBufferOrError(state->status, state->buffer, &state->result);
 }
 
 void DoDigest(std::unique_ptr<DigestState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoDigest");
   DigestState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -418,6 +425,7 @@ void DoDigest(std::unique_ptr<DigestState> passed_state) {
 }
 
 void DoGenerateKeyReply(std::unique_ptr<GenerateKeyState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoGenerateKeyReply");
   if (state->status.IsError()) {
     CompleteWithError(state->status, &state->result);
   } else {
@@ -426,6 +434,7 @@ void DoGenerateKeyReply(std::unique_ptr<GenerateKeyState> state) {
 }
 
 void DoGenerateKey(std::unique_ptr<GenerateKeyState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoGenerateKey");
   GenerateKeyState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -437,10 +446,12 @@ void DoGenerateKey(std::unique_ptr<GenerateKeyState> passed_state) {
 }
 
 void DoImportKeyReply(std::unique_ptr<ImportKeyState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoImportKeyReply");
   CompleteWithKeyOrError(state->status, state->key, &state->result);
 }
 
 void DoImportKey(std::unique_ptr<ImportKeyState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoImportKey");
   ImportKeyState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -458,6 +469,7 @@ void DoImportKey(std::unique_ptr<ImportKeyState> passed_state) {
 }
 
 void DoExportKeyReply(std::unique_ptr<ExportKeyState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoExportKeyReply");
   if (state->format != blink::kWebCryptoKeyFormatJwk) {
     CompleteWithBufferOrError(state->status, state->buffer, &state->result);
     return;
@@ -473,6 +485,7 @@ void DoExportKeyReply(std::unique_ptr<ExportKeyState> state) {
 }
 
 void DoExportKey(std::unique_ptr<ExportKeyState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoExportKey");
   ExportKeyState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -483,10 +496,12 @@ void DoExportKey(std::unique_ptr<ExportKeyState> passed_state) {
 }
 
 void DoSignReply(std::unique_ptr<SignState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoSignReply");
   CompleteWithBufferOrError(state->status, state->buffer, &state->result);
 }
 
 void DoSign(std::unique_ptr<SignState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoSign");
   SignState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -499,6 +514,7 @@ void DoSign(std::unique_ptr<SignState> passed_state) {
 }
 
 void DoVerifyReply(std::unique_ptr<VerifySignatureState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoVerifyReply");
   if (state->status.IsError()) {
     CompleteWithError(state->status, &state->result);
   } else {
@@ -507,6 +523,7 @@ void DoVerifyReply(std::unique_ptr<VerifySignatureState> state) {
 }
 
 void DoVerify(std::unique_ptr<VerifySignatureState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoVerify");
   VerifySignatureState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -519,10 +536,12 @@ void DoVerify(std::unique_ptr<VerifySignatureState> passed_state) {
 }
 
 void DoWrapKeyReply(std::unique_ptr<WrapKeyState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoWrapKeyReply");
   CompleteWithBufferOrError(state->status, state->buffer, &state->result);
 }
 
 void DoWrapKey(std::unique_ptr<WrapKeyState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoWrapKey");
   WrapKeyState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -535,10 +554,12 @@ void DoWrapKey(std::unique_ptr<WrapKeyState> passed_state) {
 }
 
 void DoUnwrapKeyReply(std::unique_ptr<UnwrapKeyState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoUnwrapKeyReply");
   CompleteWithKeyOrError(state->status, state->unwrapped_key, &state->result);
 }
 
 void DoUnwrapKey(std::unique_ptr<UnwrapKeyState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoUnwrapKey");
   UnwrapKeyState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -553,11 +574,13 @@ void DoUnwrapKey(std::unique_ptr<UnwrapKeyState> passed_state) {
 }
 
 void DoDeriveBitsReply(std::unique_ptr<DeriveBitsState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoDeriveBitsReply");
   CompleteWithBufferOrError(state->status, state->derived_bytes,
                             &state->result);
 }
 
 void DoDeriveBits(std::unique_ptr<DeriveBitsState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoDeriveBits");
   DeriveBitsState* state = passed_state.get();
   if (state->cancelled())
     return;
@@ -569,10 +592,12 @@ void DoDeriveBits(std::unique_ptr<DeriveBitsState> passed_state) {
 }
 
 void DoDeriveKeyReply(std::unique_ptr<DeriveKeyState> state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoDeriveKeyReply");
   CompleteWithKeyOrError(state->status, state->derived_key, &state->result);
 }
 
 void DoDeriveKey(std::unique_ptr<DeriveKeyState> passed_state) {
+  TRACE_EVENT0(TRACE_DISABLED_BY_DEFAULT("webcrypto"), "DoDeriveKey");
   DeriveKeyState* state = passed_state.get();
   if (state->cancelled())
     return;
