third_party/WebKit/Source/devtools/front_end/timeline_model/TimelineModel.js
@@ -1169,6 +1169,17 @@ TimelineModel.TimelineModel.RecordType = {
   GCCompleteSweep: 'ThreadState::completeSweep',
   GCCollectGarbage: 'BlinkGCMarking',
 
+  CryptoDoEncrypt: 'DoEncrypt',
+  CryptoDoEncryptReply: 'DoEncryptReply',
+  CryptoDoDecrypt: 'DoDecrypt',
+  CryptoDoDecryptReply: 'DoDecryptReply',
+  CryptoDoDigest: 'DoDigest',
+  CryptoDoDigestReply: 'DoDigestReply',
+  CryptoDoSign: 'DoSign',
+  CryptoDoSignReply: 'DoSignReply',
+  CryptoDoVerify: 'DoVerify',
+  CryptoDoVerifyReply: 'DoVerifyReply',
+
   // CpuProfile is a virtual event created on frontend to support
   // serialization of CPU Profiles within tracing timeline data.
   CpuProfile: 'CpuProfile',
